webservice-inquiry-processor/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: webserviceinquiryprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserviceinquiryprocessor
  template:
    metadata:
      labels:
        app: webserviceinquiryprocessor
    spec:
      containers:
        - name: webserviceinquiryprocessor
          image: dhtpags.azurecr.io/webserviceinquiryprocessor
          ports:
          - containerPort: 8080
      restartPolicy: Always
