webservice-inquiry-processor/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: webserviceinquiryprocessor
spec:
    type: ClusterIP
    ports:
    - port: 8080 
    selector:
        app: webserviceinquiryprocessor
